# cairo-vm_in_go

./: .gitignore  Makefile  README.md  check_fmt.sh  go.mod  go.sum  main.go
.github/workflows/: ci.yml
cairo_programs/: abs_value.cairo  assert_le_felt.cairo  assert_lt_felt.cairo  assert_nn.cairo  assert_not_equal.cairo  blake2s_felts.cairo  blake2s_hello_world_hash.cairo  cairo_keccak.cairo  common_signature.cairo  dict.cairo  dict_squash.cairo  ec_double_assign.cairo  ec_mul_inner.cairo  ec_op.cairo  factorial.cairo  fibonacci.json  finalize_blake2s_v2.cairo  keccak_add_uint256.cairo  math_cmp.cairo  pedersen_and_bitwise_builtins.cairo  pedersen_test.cairo  poseidon_builtin.cairo  poseidon_hash.cairo  pow.cairo  reduce.cairo  secp.cairo  signature.cairo  signed_div_rem.cairo  squash_dict.cairo  struct.json  uint256_root.cairo
cairo_programs/benchmarks/: fibonacci_100k.cairo  fibonacci_10K.cairo  fibonacci_500k.cairo  fibonacci_50k.cairo
cairo_programs/proof_programs/: abs_value.cairo  assert_le_felt.cairo  assert_not_equal.cairo  bitwise_builtin_test.cairo  factorial.cairo  fibonacci.cairo  is_quad_residue.cairo  pedersen_and_bitwise_builtins.cairo  pedersen_and_bitwise_builtins_with_alloc_locals.cairo  simple_print.cairo  struct.cairo
cmd/cli/: main.go
docs/: layout.md  rust-integration.md
pkg/builtins/: bitwise.go  bitwise_test.go  builtin_runner.go  ec_op.go  (+14 more)
pkg/lambdaworks/lib/lambdaworks/: Cargo.toml
pkg/lambdaworks/lib/lambdaworks/src/: lib.rs
scripts/: compare_vm_state.sh  memory_comparator.py  run_benchmarks.sh  run_benchmarks_light.sh
(+167 files in other folders)
